tests/invalid/call_expr.out
tests/invalid/call_expr.ri:5:28: error: expected named argument, found single expression
    5 |     qy(first: 5, last: 10, 9); // FAIL
      |                            ^
rivet: error: could not compile module `call_expr`, aborting due to previous error